Adding additional ignores.

--- a/minv/.gitignore
+++ b/minv/.gitignore
@@ -14,3 +14,5 @@
 /vagrant/.vagrant/
 /vagrant/shares/httpd_conf.d/README
 /vagrant/shares/httpd_conf.d/welcome.conf
+/vagrant/shares/httpd_conf.d/wsgi.conf.rpmnew
+
