--- a/minv/setup.cfg
+++ b/minv/setup.cfg
@@ -7,8 +7,8 @@
 #-------------------------------------------------------------------------------
 
 [bdist_rpm]
-requires=ntp logrotate sudo vim-minimal httpd mod_wsgi mod_qos mapcache python-jinja2 pycairo gdal gdal-python
-provides=sxcat python-sxcat
-install_script=package/install-script.sh
-pre_install=package/pre-install.sh
-post_install=package/post-install.sh
+requires=ntp logrotate sudo vim-minimal httpd mod_wsgi
+provides=minv python-minv
+install_script=minv/package/install/install-script.sh
+pre_install=minv/package/install/pre-install.sh
+post_install=minv/package/install/post-install.sh
