Adding log file location to synced folders

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@
 /vagrant/shares/httpd_conf.d/README
 /vagrant/shares/httpd_conf.d/welcome.conf
 /vagrant/shares/httpd_conf.d/wsgi.conf.rpmnew
-
+/vagrant/shares/minv_log/*
