--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -31,6 +31,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # argument is a set of non-required options.
   config.vm.synced_folder  "./shares/httpd_conf.d", "/etc/httpd/conf.d", owner: "root", group: "root"
   config.vm.synced_folder  "./shares/instance", "/srv/minv"
+  config.vm.synced_folder  "./shares/minv_log", "/var/log/minv", mount_options: ["dmode=777","fmode=777"], create: true
   config.vm.synced_folder  "..", "/var/minv"
 
   # Shell provisioning
