Adding additional installation and uninstallation routines. Cleaning paths

--- a/minv/package/httpd_conf.d/minv.conf
+++ b/minv/package/httpd_conf.d/minv.conf
@@ -5,20 +5,16 @@ WSGISocketPrefix /var/run/wsgi
     ServerName minv
     ServerAdmin webmaster@eox.at
     
-    Alias /static/ /var/www/html/static/
-    WSGIScriptAlias / /srv/minv/minv_instance/wsgi.py
-    
+    WSGIDaemonProcess minv processes=10 threads=10 home=/srv/minv/ user=minv group=minv
 
-    # TODO: minv user/group
-
-    WSGIDaemonProcess minv processes=10 threads=10 home=/srv/minv/
+    Alias /minv_static/ /srv/minv/static/
+    WSGIScriptAlias / /srv/minv/minv_instance/wsgi.py process-group=minv
 
     <Directory /srv/minv/minv_instance/>
         AllowOverride None
         Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
         Header set Access-Control-Allow-Origin *
         AddHandler wsgi-script .py
-        WSGIProcessGroup minv
         Order Allow,Deny
         Allow from all
     </Directory>
