--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@
 
 [bdist_rpm]
 requires=ntp logrotate sudo vim-minimal httpd mod_wsgi
-provides=minv python-minv
+provides=minv python-minv python-psycopg2 geos
 install_script=minv/package/install/install-script.sh
 pre_install=minv/package/install/pre-install.sh
 post_install=minv/package/install/post-install.sh
+post_uninstall=minv/package/install/post-uninstall.sh
