Adding configuration parsing facilities
settings.py values are now filled from values taken from minv.conf

--- a/vagrant/shares/minv_conf/minv.conf
+++ b/vagrant/shares/minv_conf/minv.conf
@@ -1,8 +1,8 @@
 [database]
 # Database specific settings
 
-# The Hostname or IP maanging the database. Optional: defaults to ''.
-#host=
+# The Hostname or IP maanging the database. Optional: defaults to 'localhost'.
+#host=localhost
 
 # The IP port the database is accessible under. Optional: Defaults to the
 # standard port for postgresql databases.
@@ -15,7 +15,7 @@
 #user=minv
 
 # The password for the user to access the database. Mandatory.
-#password=
+password=abcdefghijklmnopq
 
 [harvesting]
 # Harvesting specific settings.
