Adding additional gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ fabrc.conf
 /vagrant/shares/httpd_conf.d/welcome.conf
 /vagrant/shares/httpd_conf.d/wsgi.conf.rpmnew
 /vagrant/shares/minv_log/*
+/vagrant/shares/instance/static/*
