Adding additional configuration fields

--- a/minv/package/minv.conf
+++ b/minv/package/minv.conf
@@ -17,6 +17,13 @@
 # The password for the user to access the database. Mandatory.
 #password=
 
+[daemon]
+num_workers=16
+socket_filename=/tmp/minv/daemon.socket
+port=
+lock_directory=/tmp/minv/daemon/lock
+
 [harvesting]
+num_harvesters=8
 # Harvesting specific settings.
 
