--- a/vagrant/shares/minv_conf/minv.conf
+++ b/vagrant/shares/minv_conf/minv.conf
@@ -17,6 +17,17 @@
 # The password for the user to access the database. Mandatory.
 password=abcdefghijklmnopq
 
+
+[daemon]
+# Daemon specific settings
+
+num_workers=16
+socket_filename=/tmp/minv/daemon.socket
+port=
+lock_directory=/tmp/minv/daemon/lock
+
+
 [harvesting]
 # Harvesting specific settings.
+num_harvesters=8
 
