Updated test intance collection configuration.

--- a/vagrant/shares/minv_conf/collections/Landsat5/SIP-SCENE/collection.conf
+++ b/vagrant/shares/minv_conf/collections/Landsat5/SIP-SCENE/collection.conf
@@ -1,1 +1,19 @@
 [inventory]
+export_interval = 
+harvest_interval = 
+available_alignment_fields = frame,platform_serial_identifier,instrument,creation_date,baseline
+
+[metadata_mapping]
+track = wrsLatitudeGrid
+checksum = productSize
+frame = wrsLongitudeGrid
+orbit_number = orbitNumber
+product_quality_degradatation = productQualityDegradation
+filename = productURI
+instrument = instrumentShortName
+processing_mode = processingMode
+filesize = productSize
+begin_time = beginAcquisition
+platform_serial_identifier = platformSerialIdentifier
+end_time = endAcquisition
+
