Fixing minv.conf template

--- a/minv/package/minv.conf
+++ b/minv/package/minv.conf
@@ -1,3 +1,6 @@
+[minv]
+log_level = INFO
+
 [database]
 # Database specific settings
 
@@ -20,7 +23,7 @@
 [daemon]
 num_workers=16
 socket_filename=/tmp/minv/daemon.socket
-port=
+daemon_port=
 lock_directory=/tmp/minv/daemon/lock
 
 [harvesting]
