--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@
 #-------------------------------------------------------------------------------
 
 [bdist_rpm]
-requires=ntp logrotate sudo vim-minimal httpd mod_wsgi
-provides=minv python-minv python-psycopg2 geos
+requires=ntp logrotate sudo vim-minimal httpd mod_wsgi python-psycopg2 geos proj
+provides=minv python-minv
 install_script=minv/package/install/install-script.sh
 pre_install=minv/package/install/pre-install.sh
 post_install=minv/package/install/post-install.sh
