Fixing webserver root dir and permissions

--- a/minv/package/httpd_conf.d/minv.conf
+++ b/minv/package/httpd_conf.d/minv.conf
@@ -5,7 +5,7 @@ WSGISocketPrefix /var/run/wsgi
     ServerName minv
     ServerAdmin webmaster@eox.at
     
-    WSGIDaemonProcess minv processes=10 threads=10 home=/srv/minv/ user=minv group=minv
+    WSGIDaemonProcess minv processes=10 threads=10 home=/srv/minv/minv_instance/ user=minv group=minv
 
     Alias /minv_static/ /srv/minv/static/
     WSGIScriptAlias / /srv/minv/minv_instance/wsgi.py process-group=minv
