Allowing to have one metadata mapping per location.
Falling back to default mapping.
Configuration management for per-location mapping

--- a/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-22T101740.conf
+++ b/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-22T101740.conf
@@ -1,17 +1,4 @@
-# python /srv/minv/manage.py minv_collection -c -m Landsat5 -f SIP-SCENE -o http://oads1.pdgs.esa.int/ -o http://oads2.pdgs.esa.int/ -n http://nga1.pdgs.esa.int/ -n http://nga2.pdgs.esa.int/
-# python /srv/minv/manage.py minv_ingest -m Landsat5 -f SIP-SCENE -u http://oads1.pdgs.esa.int/ /var/minv/test/data/Landsat5/SIP-SCENE/0/19930101-000000_19931231-235959_20150709-145236.index --traceback
-# python /srv/minv/manage.py minv_ingest -m Landsat5 -f SIP-SCENE -u http://oads2.pdgs.esa.int/ /var/minv/test/data/Landsat5/SIP-SCENE/1/19930101-000000_19931231-235959_20150709-145236.index --traceback
-# python /srv/minv/manage.py minv_ingest -m Landsat5 -f SIP-SCENE -u http://nga1.pdgs.esa.int/ /var/minv/test/data/Landsat5/SIP-SCENE/2/19930101-000000_19931231-235959_20150709-145236.index --traceback
-
-
-python /srv/minv/manage.py collection -c Envisat/ASA_IMS_1P \
-    -o https://data.eox.at/minv/meta/OADS1/Envisat/ASA_IMS_1P/ \
-    -o https://data.eox.at/minv/meta/OADS2/Envisat/ASA_IMS_1P/ \
-    -n https://data.eox.at/minv/meta/ngA1/Envisat/ASA_IMS_1P/ \
-    -n https://data.eox.at/minv/meta/ngA2/Envisat/ASA_IMS_1P/
-
-
-echo "[inventory]
+[inventory]
 export_interval = P1D
 harvest_interval = P1D
 available_alignment_fields = orbit_number,track,frame,instrument
@@ -108,10 +95,4 @@ orbit_direction = orbitDirection
 # product_quality_degradatation_tag =
 footprint = footprint
 # scene_centre =
-" > Envisat_ASA_IMS_1P.conf
 
-python /srv/minv/manage.py config Envisat/ASA_IMS_1P -i Envisat_ASA_IMS_1P.conf
-
-rm Envisat_ASA_IMS_1P.conf
-
-python /srv/minv/manage.py harvest Envisat/ASA_IMS_1P -a
