--- a/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T084347.conf
+++ b/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T084347.conf
@@ -16,6 +16,10 @@ end_time = endPosition
 orbit_direction = orbitDirection
 footprint = footprint
 
+[metadata_mapping.https://data.eox.at/minv/meta/ngA1/Envisat/ASA_IMS_1P/]
+filename = xxx
+checksum = yyy
+
 [metadata_mapping.https://data.eox.at/minv/meta/OADS1/Envisat/ASA_IMS_1P/]
 filename = productURI
 orbit_number = orbitNumber
@@ -36,4 +40,7 @@ frame = wrsLatitudeGrid
 swath = swathIdentifier
 instrument = instrumentShortName
 begin_time = beginAcquisition
+end_time = endAcquisition
+orbit_direction = orbitDirection
+footprint = footprint
 
