--- a/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T085421.conf
+++ b/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T085421.conf
@@ -36,4 +36,6 @@ frame = wrsLatitudeGrid
 swath = swathIdentifier
 instrument = instrumentShortName
 begin_time = beginAcquisition
+end_time = endAcquisition
+orbit_direction = orbitDirection
 
