--- a/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T085427.conf
+++ b/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IMS_1P/collection-2016-09-27T085427.conf
@@ -36,4 +36,5 @@ frame = wrsLatitudeGrid
 swath = swathIdentifier
 instrument = instrumentShortName
 begin_time = beginAcquisition
+end_time = endAcquisition
 
