setting default log_level to debug

--- a/vagrant/shares/minv_conf/minv.conf
+++ b/vagrant/shares/minv_conf/minv.conf
@@ -1,3 +1,7 @@
+[minv]
+#log_level = INFO
+log_level = DEBUG
+
 [database]
 # Database specific settings
 
@@ -9,7 +13,7 @@
 #port=5432
 
 # The name of the database on the host. Optional: defaults to 'minv'
-#name=minv
+name=minv
 
 # The database user to access the database. Optional: defaults to 'minv'
 #user=minv
