--- a/vagrant/shares/httpd_conf.d/minv.conf
+++ b/vagrant/shares/httpd_conf.d/minv.conf
@@ -5,6 +5,7 @@ WSGIPythonPath /srv/minv
     ServerAdmin webmaster@eox.at
     
     Alias /static/ /var/www/html/static/
+    Alias /minv_static/ /srv/minv/static/
     WSGIScriptAlias / /srv/minv/minv_instance/wsgi.py
     
     WSGIDaemonProcess minv processes=10 threads=10 home=/srv/minv/
