--- a/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IM__0P/collection.conf
+++ b/vagrant/shares/minv_conf/collections/ENVISAT/ASA_IM__0P/collection.conf
@@ -1,19 +1,97 @@
 [inventory]
-export_interval = 
-harvest_interval = 
-available_alignment_fields = frame,platform_serial_identifier,instrument,creation_date,baseline
+export_interval = P1D
+harvest_interval = P1D
+available_alignment_fields = orbit_number,track,frame,instrument
 
 [metadata_mapping]
-track = wrsLatitudeGrid
-checksum = productSize
-frame = wrsLongitudeGrid
+filename = filename
+# filesize =
+# checksum =
 orbit_number = orbitNumber
-product_quality_degradatation = productQualityDegradation
-filename = productURI
+track = wrsLongitudeGrid
+frame = wrsLatitudeGrid
+# platform_serial_identifier =
+# mission_phase =
+# operational_mode =
+swath = swathIdentifier
 instrument = instrumentShortName
-processing_mode = processingMode
-filesize = productSize
-begin_time = beginAcquisition
-platform_serial_identifier = platformSerialIdentifier
-end_time = endAcquisition
+# product_id =
+begin_time = beginPosition
+end_time = endPosition
+# insertion_time =
+# creation_date =
+# baseline =
+# processing_centre =
+# processing_date =
+# processing_mode =
+# processor_version =
+# acquisition_station =
+orbit_direction = orbitDirection
+# file_type =
+# product_quality_degradatation =
+# product_quality_status =
+# product_quality_degradatation_tag =
+footprint = footprint
+# scene_centre =
 
+[metadata_mapping.https://data.eox.at/minv/meta/OADS1/Envisat/ASA_IMS_1P/]
+filename = productURI
+# filesize =
+# checksum =
+orbit_number = orbitNumber
+track = wrsLongitudeGrid
+frame = wrsLatitudeGrid
+# platform_serial_identifier =
+# mission_phase =
+# operational_mode =
+swath = swathIdentifier
+instrument = instrumentShortName
+# product_id =
+begin_time = beginAcquisition
+end_time = endAcquisition
+# insertion_time =
+# creation_date =
+# baseline =
+# processing_centre =
+# processing_date =
+# processing_mode =
+# processor_version =
+# acquisition_station =
+orbit_direction = orbitDirection
+# file_type =
+# product_quality_degradatation =
+# product_quality_status =
+# product_quality_degradatation_tag =
+footprint = footprint
+# scene_centre =
+
+[metadata_mapping.https://data.eox.at/minv/meta/OADS2/Envisat/ASA_IMS_1P/]
+filename = productURI
+# filesize =
+# checksum =
+orbit_number = orbitNumber
+track = wrsLongitudeGrid
+frame = wrsLatitudeGrid
+# platform_serial_identifier =
+# mission_phase =
+# operational_mode =
+swath = swathIdentifier
+instrument = instrumentShortName
+# product_id =
+begin_time = beginAcquisition
+end_time = endAcquisition
+# insertion_time =
+# creation_date =
+# baseline =
+# processing_centre =
+# processing_date =
+# processing_mode =
+# processor_version =
+# acquisition_station =
+orbit_direction = orbitDirection
+# file_type =
+# product_quality_degradatation =
+# product_quality_status =
+# product_quality_degradatation_tag =
+footprint = footprint
+# scene_centre =
