Fixing Django RPM dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@
 
 
 [bdist_rpm]
-requires=ntp logrotate sudo vim-minimal httpd mod_wsgi python-psycopg2 geos proj python-django
+requires=ntp logrotate sudo vim-minimal httpd mod_wsgi python-psycopg2 geos proj Django
 provides=minv python-minv
 install_script=minv/package/install/install-script.sh
 pre_install=minv/package/install/pre-install.sh
